# HentaiReader

./: .gitignore  1.py  LICENSE  README.md  README.new.md  README_IMAGE_TRANSLATOR.md  README_OCR.md  README_TRANSLATION.md  clean.py  dark_style.py  desktop_main.py  frontend_refactor_plan.md  list_qfluentwidgets.py  main.py  main_new.py  main_new_with_browser.py  manga_config.json  manga_logger.py  manga_manager.py  manga_model.py  manga_viewer.log.1  manga_viewer.log.2  manga_viewer.log.3  manga_viewer.log.4  manga_viewer.py  manga_viewer.spec  nuitka-crash-report.xml  plan_force_viewer_dark_theme.md  plan_unified_styles.md  pyproject.toml  refactor_plan_v4.1.md  refactor_plan_v4.md  requirements.txt  test_dimension_analysis.py  theme_refactor_plan.md  translation_settings_plan.md  update_ocr_font.bat  uv.toml  web_main.py
agent必读/: Web架构框架.md  调试原则.md
cache/: harmonization_map.json
config/: config.json
core/: __init__.py  batch_translation_worker.py  cache_coordinator.py  cache_factory.py  cache_interface.py  cache_key_generator.py  config.py  data_models.py  harmonization_map_manager.py  image_compressor.py  image_translator.py  manga_cache.py  manga_manager.py  manga_model.py  manga_text_replacer.py  ocr_cache_manager.py  ocr_manager.py  persistent_translation_cache.py  realtime_translation_cache_manager.py  realtime_translation_cache_utils.py  realtime_translation_service.py  realtime_translator.py  thumbnail_cache.py  translation_cache_checker.py  translation_cache_manager.py  translation_factory.py  translation_priority_calculator.py  translator.py
core/core_cache/: cache_factory.py  manga_cache.py  ocr_cache_manager.py  persistent_translation_cache.py  translation_cache_manager.py
core/image/: image_compressor.py
core/manga/: manga_manager.py  manga_text_replacer.py
core/ocr/: ocr_manager.py
core/test/: test_manga_batch_translate.py
core/translation/: image_translator.py  realtime_translator.py  translation_factory.py  translation_queue_manager.py  translation_queue_models.py  translator.py
core/translators/: README.md  nllb_translator.py  test_readme_example.py
data/: translation_queue.db
electron-app/: README.md  package.json  test-electron.js
electron-app/design/: component-architecture.md
electron-app/renderer/: index.html  main.html
readme_ai/: Web架构框架.md  计划原则.md
readme_ai/code经验/: apply_diff使用经验.md  核心架构.md
styles/: __init__.py  dark_style.py  light_style.py  style.py  ui_style.py  win_theme_color.py
testpy/ocr_translation/: __init__.py  ocr_translation_window.py  translation_settings_window.py
ui/: __init__.py  base_window.py  manga_viewe.py  manga_viewer.new.py  manga_viewer.py  manga_viewer_new.py
ui/components/: __init__.py  content_panel.py  event_handler.py  image_label.py  index_panel.py  (+10 more)
utils/: __init__.py  color_utils.py  image_compression.py  manga_logger.py
views/: cache_management_interface.py  manga_browser_interface.py  manga_translation_interface.py  settings_interface.py
web/: __init__.py  app.py  core_interface.py  manga_viewer_manager.py
(+101 files in other folders)
